Al/fix modal overflow (#1021)
* fix: change overflow detection to check content element instead of modal container

* fix: remove top padding from footer when overflow evaluates to false

* fix: remove extra border property

--- a/src/components/Common/UI/Modal/Modal.module.scss
+++ b/src/components/Common/UI/Modal/Modal.module.scss
@@ -93,17 +93,15 @@
   bottom: toRem(-24);
   display: flex;
   gap: toRem(12);
-  padding-top: toRem(24);
   padding-left: toRem(24);
   padding-right: toRem(24);
   padding-bottom: toRem(24);
-  border-top: 1px solid var(--g-colorBorder);
-  box-shadow: 0 toRem(-8) toRem(16) 0 rgba(0, 0, 0, 0.08);
 }
 
 .footerFixed {
   padding: toRem(24);
   flex: 0 0 auto;
+  background-color: var(--g-colorBody);
   box-shadow:
     0 toRem(-1) 0 0 var(--g-colorBorder),
     0 toRem(-8) toRem(16) 0 rgba(0, 0, 0, 0.08);
